# openai-realtime-embedded-sdk

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp-box  sdkconfig.defaults.esp32s3_others
.github/workflows/: build.yaml
boards/: esp-box.cfg  esp32s3_korvo_2.cfg  esp32s3_others.cfg  linux.cfg
src/: CMakeLists.txt  Kconfig.projbuild  http.cpp  idf_component.yml  main.cpp  main.h  media.cpp  media.h  media_gmf.cpp  platform.h  platform_esp32s3.cpp  platform_linux.cpp  webrtc.cpp
